<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:background="@drawable/bg_ll_toolbar"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/llToolbar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ContentDescription, UseCompoundDrawables">

        <LinearLayout
            android:id="@+id/btnBold"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/bold"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnItalic"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/italic"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnUnderline"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/underline"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnUpTextSize"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/up_size"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnDownTextSize"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/down_size"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnColorRed"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/color_red"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnColorBlue"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/color_blue"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </LinearLayout>
</HorizontalScrollView>