<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:background="@drawable/bg_ll_toolbar"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/llToolbar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="ContentDescription, UseCompoundDrawables">

        <LinearLayout
            android:id="@+id/btnEncode"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/encode"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnDecode"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/decode"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnBulletStyle1"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/bullet_1"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnBulletStyle2"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_6sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mood" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/bullet_2"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </LinearLayout>
</HorizontalScrollView>